data/diff_tests/wasmtime/call_indirect_IncorrectHandlingofControlFlowAcrossModuleBoundaries_4711.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\00\02\95\80\80\80\00\01\03\65"
    "\6e\76\0d\65\78\74\65\72\6e\61\6c\5f\66\75\6e\63"
    "\00\00\03\82\80\80\80\00\01\01\04\85\80\80\80\00"
    "\01\70\01\01\01\09\87\80\80\80\00\01\00\41\00\0b"
    "\01\00\0a\90\80\80\80\00\01\8a\80\80\80\00\00\41"
    "\2a\41\00\11\00\00\1a\0b"
  )
""
)